--- a/pocetna.html
+++ b/pocetna.html
@@ -1,22 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz</title>
-   <link rel="stylesheet" href="style1.css">
-</head>
-<body>
-    <div>
-        <header><h1>Renatin kviz</h1></header>
-        <section>
-            <img src="slike/poyadina.jpg" alt="" width="200px;">
-        </section>
-
-        <button id ="clik">Start</button>
-
-    </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Questions</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <script src="script.js"></script>
     <script src="script1.js"></script>
-</body>
+  </body>
 </html>
