--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="sr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz</title>
-   <link rel="stylesheet" href="style1.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style1.css" />
+  </head>
+  <body>
     <div>
-        <header><h1>Renatin kviz</h1></header>
-        <section>
-            <img src="slike/poyadina.jpg" alt="" width="200px;">
-        </section>
+      <header><h1>Renatin kviz</h1></header>
+      <section>
+        <img src="slike/pozadina.jpg" alt="" width="200px;" />
+      </section>
 
-        <button id ="clik">Start</button>
-
+      <button id="clik">Start</button>
     </div>
     <script src="script1.js"></script>
-</body>
+  </body>
 </html>
