--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="slike/pozadina.jpg" alt="" width="200px;" />
       </section>
 
-      <button id="clik">Start</button>
+      <footer><button id="clik">Start</button></footer>
     </div>
     <script src="script1.js"></script>
   </body>
